manifests/installation/charts/onex/kustomize/onex-nightwatch/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: onex-nightwatch # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-nightwatch
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --config=/opt/onex/conf/onex-nightwatch.yaml
        image: ccr.ccs.tencentyun.com/superproj/onex-nightwatch-amd64:v1.0.0
        name: onex-nightwatch
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            port: 8080
            path: /healthz
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz
        startupProbe:
          httpGet:
            port: 8080
            path: /healthz
        volumeMounts:
        - mountPath: /opt/onex/conf/onex-nightwatch.yaml
          name: onex-nightwatch
          subPath: onex-nightwatch.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-nightwatch.yaml
            path: onex-nightwatch.yaml
          name: onex-nightwatch
        name: onex-nightwatch
